# mixtape

./: .copier-answers.resonant.yml  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  MANIFEST.in  Procfile  README.md  convert_jpeg_to_png.py  csv_to_json.py  docker-compose.override.yml  docker-compose.yml  it.py  manage.py  pyproject.toml  tox.ini
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
dev/: .env.docker-compose  .env.docker-compose-native  django.Dockerfile
dev/singularity/: README.md  run-containers.sh
dev/singularity/definitions/: celery.def  django.def  postgres.def  rabbitmq.def
devops/docker/: docker-compose.yml
devops/docker/fastapi/: Dockerfile
devops/hpc/: README.md  bash_script.sh  test.py
devops/singularity/: README.md  bash_script.sh  run_training.py
django_ga4_study/: __init__.py  apps.py  middleware.py
django_ga4_study/static/django_ga4_study/: ga_core.js  ga_minimals.js  ga_plotly.js  ga_state.js  ga_visibility.js
django_ga4_study/templates/django_ga4_study/: ga4_head.html
django_ga4_study/templatetags/: ga4_study.py
examples/logging/: README.md
examples/logging/Knights Archers Zombies/: README.md  best_episode_960474699971313685.json  worst_episode_579405839883620459.json
examples/logging/Knights Archers Zombies/PPO/: basic-variant-state-2024-09-25_18-01-41.json  experiment_state-2024-09-25_18-01-41.json
examples/logging/Knights Archers Zombies/PPO/PPO_knights_archers_zombies_v10_37af9_00000_0_2024-09-25_18-01-41/: events.out.tfevents.1727287306.03067f08a5d7  params.json  params.pkl  progress.csv  result.json
fastapi/: Dockerfile  README.md  requirements.txt
fastapi/app/: __init__.py  callbacks.py  logger.py  main.py
mixtape/: urls.py
mixtape/Visualization Module/: Vis.py  VisConfig.py  VisDataManager.py  VisMain.py  VisTimelineController.py  environment.py
mixtape/core/: apps.py  context_processors.py  json_encoder.py  views.py
mixtape/core/admin/: __init__.py  action_mapping.py  agent_step.py  checkpoint.py  clustering_result.py  episode.py  inference.py  inference_request.py  rendered_step.py  step.py  training.py  training_request.py  unit_step.py  utils.py
mixtape/core/analysis/: __init__.py  clustering.py  constants.py
mixtape/core/analysis/clustering/: __init__.py  algorithms.py
mixtape/core/analysis/ray_utils/: environments.py  wrappers.py
mixtape/core/ingest/: README.md  simple_baselines_lunar_lander.ipynb
mixtape/core/ingest/models/: external_episode.py
mixtape/core/management/commands/: _callbacks.py  _constants.py  _logger.py  _utils.py  _wrappers.py  inference.py  ingest_episode.py  list_checkpoints.py  training.py
mixtape/core/management/ingest/: README.md  external_episode.py  simple_baselines_lunar_lander.ipynb
mixtape/core/migrations/: 0001_default_site.py  0002_initial.py  0003_alter_agentstep_step.py  0004_alter_step_episode_step_unique_episode_number.py  0005_trainingrequest_is_external_alter_checkpoint_archive_and_more.py  0006_actionmapping.py  0007_alter_actionmapping_mapping_alter_inference_config_and_more.py  0008_remove_agentstep_reward_agentstep_rewards_and_more.py  0009_agentstep_action_distribution.py  0010_agentstep_custom_metrics_agentstep_health_and_more.py  0010_agentstep_custom_metrics_and_more.py  0010_clusteringresult.py  0011_agentstep_enemy_agent_health_and_more.py  0011_agentstep_enemy_unit_steps.py  0011_remove_checkpoint_unique_checkpoint_best_and_more.py
mixtape/core/models/: __init__.py  action_mapping.py  agent_step.py  checkpoint.py  clustering_result.py  episode.py  episode_step.py  inference.py  inference_request.py  rendered_step.py  step.py  training.py  training_request.py
mixtape/core/ray_utils/: callbacks.py  constants.py  environments.py  json_encoder.py  logger.py  utility_functions.py  wrappers.py
mixtape/core/static/mixtape/core/: search_filters.js  themeStore.js
mixtape/core/tasks/: __init__.py  clustering_tasks.py  inference_tasks.py  training_tasks.py
mixtape/core/templates/: simple_view.html
mixtape/core/templates/core/: _alpine_insights_store.html  _alpine_sidepanel.html  _alpine_tabs.html  action_v_frequency.html  action_v_reward_frequency.html  base.html  clustering.html  clustering_timeline.html  combat_reward_over_time.html  distribution_plot.html  drawer.html  enemy_health_over_time.html  env_reward_value_estimate.html  episode_info.html  friendly_health_over_time.html  health_death_rewards.html  home.html  insights.html  insights_step.html  media_viewer.html  nav_bar.html  navigation_reward_over_time.html  observation_clustering.html  observation_clustering_timeline.html  overall_nav_vs_combat.html  per_unit_actions_over_time.html  predicted_vs_actual_rewards.html  replay_controls.html  replay_details.html  reward_v_frequency.html  rewards_over_time.html  rewards_over_time_decomp.html  simple_view.html  timeline.html  toolbar.html  units_over_time.html
mixtape/core/templates/core/custom/: user_feedback.html
mixtape/core/templates/core/figma/: _side_panel_overview.html  _tabs_overview.html
mixtape/core/templates/core/home/: home.html
mixtape/core/templates/core/insights/: action_v_frequency.html  action_v_reward_frequency.html  clustering.html  clustering_timeline.html  episode_info.html  insights.html  media_viewer.html  (+5 more)
mixtape/core/tests/: conftest.py  factories.py  test_cli.py  test_page.py  test_view.py
mixtape/core/tests/data/: checkpoint_archive.tar.bz2  kaz_checkpoint.tar.bz2  lunar_lander_checkpoint.tar.bz2
mixtape/core/views/: __init__.py  summary_view.py
mixtape/environments/: mappings.py
mixtape/ray_utils/: callbacks.py  logger.py  utils.py
mixtape/settings/: base.py  build.py  development.py  production.py  testing.py
production/: .env.production  django.Dockerfile  docker-compose.yml
singularity/: .env.singularity  .gitignore  README.md  build-images.sh  run-containers.sh  stop-containers.sh
singularity/definitions/: celery.def  django.def  minio.def  postgres.def
static/core/js/: insights.tabs.js
terraform/: .terraform.lock.hcl  apex_redirect.tf  django.tf  main.tf
(+63 files in other folders)
