[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mixtape"
version = "0.0.0"
requires-python = ">=3.11"
license = { text = "Apache 2.0" }
classifiers = ["Private :: Do Not Upload"]
dependencies = [
  "ale-py",
  "autorom[accept-rom-license]",
  "celery",
  "django[argon2]",
  "django-allauth",
  "django-auth-style",
  "django-click",
  "django-cors-headers",
  "django-environ",
  "django-extensions",
  "django-filter",
  "django-oauth-toolkit",
  "django-resonant-settings[allauth]",
  "django-resonant-utils",
  "djangorestframework",
  "drf-yasg",
  "gymnasium[atari, other]",
  # PettingZoo[butterfly] extra pulls in both pymunk and pygame, but the pypi version of PettingZoo
  # is extremely outdated and depends on a version of pymunk that does not build and has no bdist
  # wheel for our target platforms. So we manually specify those transitive dependency versions.
  "pymunk==6.11.0",
  "pygame>=2.3.0",
  "PettingZoo>=1.24.3",
  "Pillow",
  "psycopg[binary]",
  "ray[default, rllib]==2.34.0",
  "rich",
  "SuperSuit",
  "torch",
  "whitenoise[brotli]",
  # Production-only
  "django-s3-file-field[s3]",
  "django-storages[s3]",
  "gunicorn",
  "sentry-sdk[celery,django]",
]

[project.optional-dependencies]
dev = [
  "django-browser-reload",
  "django-debug-toolbar",
  "django-minio-storage",
  "django-s3-file-field[minio]",
  "ipython",
  "tox",
]

[dependency-groups]
lint = [
  "flake8",
  "flake8-black",
  "flake8-bugbear",
  "flake8-docstrings",
  "flake8-isort",
  "flake8-quotes",
  "pep8-naming",
]
format = [
  "black",
  "isort",
]
type = [
  "mypy",
  {include-group = "test"},
  "celery-types",
  "django-stubs[compatible-mypy]",
  "djangorestframework-stubs",
]
test = [
  "factory-boy",
  "pytest",
  "pytest-django",
  "pytest-mock",
]

[tool.hatch.build]
packages = [
  "mixtape",
]

[tool.black]
line-length = 100
skip-string-normalization = true
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
# Sort by name, don't cluster "from" vs "import"
force_sort_within_sections = true
# Combines "as" imports on the same line
combine_as_imports = true

[tool.mypy]
files = [
  "mixtape",
]
show_error_codes = true
ignore_missing_imports = true
plugins = [
    "mypy_django_plugin.main",
]

[tool.django-stubs]
django_settings_module = "mixtape.settings.testing"

[tool.pytest.ini_options]
addopts = [
  # Test utilies should be imported absolutely from the pythonpath,
  # so use the Pytest-reccomended "importlib" mode
  "--import-mode=importlib",
  "--strict-config",
  "--strict-markers",
  "--showlocals",
  "--verbose",
]
filterwarnings = [
  "error",
]
DJANGO_SETTINGS_MODULE = "mixtape.settings.testing"
